--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -3,26 +3,26 @@ Reproducible Research: Peer Assessment 1
 
 This assignment makes use of data from a personal activity monitoring device. This device collects data at 5 minute intervals through out the day. The data consists of two months of data from an anonymous individual collected during the months of October and November, 2012 and include the number of steps taken in 5 minute intervals each day.
 
-## Loading and preprocessing the data
+### Loading and preprocessing the data
 
 The data is loaded into `myData` variable and the column _date_ format is changed:
 
 ```{r}
 myData <- read.csv("activity.csv", header=TRUE, sep=",")
-myData[,2] <- as.Date(myData[,2], format="%Y-%m-%d")
+myData$date <- as.Date(myData$date, format="%Y-%m-%d")
 ```
 
-## What is mean total number of steps taken per day?
+### What is mean total number of steps taken per day?
 
 For this part of the assignment, the missing values in the dataset were ignored.
 
 ```{r}
-myDataClean <- myData[which(myData$steps != "NA"), ]
+myDataClean <- subset(myData,myData$steps != "NA")
 ```
 
-#### Histogram of the total number of steps taken each day
+1. Histogram of the total number of steps taken each day
 
-Firstable, we sum the steps for each day with the help of the `plyr` package.
+First of all, we sum the steps for each day with the help of the `plyr` package.
 
 ```{r}
 library(plyr)
@@ -35,14 +35,16 @@ Then, we make the histogram.
 hist(StepsPerDay$steps, col="coral", xlab="Number of Steps", main="Total number of steps per day")
 ```
 
-Calculate and report the mean and median total number of steps taken per day
+2. Calculate and report the mean and median total number of steps taken per day
 
 ```{r}
 mean(StepsPerDay$steps)
 median(StepsPerDay$steps)
 ```
 
-## What is the average daily activity pattern?
+### What is the average daily activity pattern?
+
+1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis).
 
 First, we calculate the average number of steps taken each 5-minute interval. 
 
@@ -58,24 +60,25 @@ plot(StepsAveragePerInterval$interval, StepsAveragePerInterval$StepsAvg, type = 
      main="Average Daily Activity Pattern", xlab="5-minute interval", ylab="Average number of steps")
 ```
 
-#### Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 
 ```{r}
 StepsAveragePerInterval[StepsAveragePerInterval$StepsAvg==max(StepsAveragePerInterval$StepsAvg),]
 ```
 
-## Imputing missing values
-- Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+### Imputing missing values
+
+1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
 
 ```{r}
 sum(is.na(myData$steps))
 ```
 
-- Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
 
 Considering that we already calculate the average number of steps taken each 5-minute interval, we are going to use this value for filling in all the missing values in the dataset.
 
-- Create a new dataset that is equal to the original dataset but with the missing data filled in.
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
 ```{r}
 fillData <- join(myData, StepsAveragePerInterval, by="interval", type="left")
 
@@ -83,7 +86,7 @@ fillData$steps[is.na(fillData$steps)] <- fillData$StepsAvg[is.na(fillData$steps)
 
 ```
 
-- Make a histogram of the total number of steps taken each day and calculate and report the mean and median total number of steps taken per day.
+4. Make a histogram of the total number of steps taken each day and calculate and report the mean and median total number of steps taken per day.
 
 ```{r}
 NewStepsPerDay <- ddply(fillData, .(date), summarize, steps=sum(steps))
@@ -93,14 +96,14 @@ mean(NewStepsPerDay$steps)
 median(NewStepsPerDay$steps)
 ```
 
-- Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+##### Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
 
-The impact of imputing missing data is that the total number of steps increase. But because the values filled were average numbers the mean value didn´t change. The behavior of the histogram remains.
+The impact of imputing missing data is that the total number of steps increase. But because the values filled were average numbers the mean value didn't change. The behavior of the histogram remains.
 
-## Are there differences in activity patterns between weekdays and weekends?
-For this part we use the weekdays() function and the dataset with the filled-in missing values.
+### Are there differences in activity patterns between weekdays and weekends?
+For this part we use the `weekdays()` function and the dataset with the filled-in missing values.
 
-- Create a new factor variable in the dataset with two levels - "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
+1. Create a new factor variable in the dataset with two levels (_weekday_ and _weekend_) indicating whether a given date is a weekday or weekend day.
 
 ```{r}
 weekData <- fillData
@@ -108,7 +111,7 @@ weekData["weekday"] <- weekdays(fillData$date)
 weekData["DayType"] <- ifelse(weekData$weekday %in% c("Saturday", "Sunday"),"weekend", "weekday")
 ```
 
-- Make a panel plot containing a time series plot (i.e. `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).
+2. Make a panel plot containing a time series plot (i.e. `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).
 
 ```{r}
 StepsPerDayWK <- ddply(weekData, .(interval, DayType), summarize, steps=mean(steps))
